--- a/shopweb/web/createproduct.html
+++ b/shopweb/web/createproduct.html
@@ -135,7 +135,7 @@
 						</div>
 					</form>
 					<div class="row top15">
-						<a id="create_product" class="margin15 cartt" href="#">Adaugă</a>
+						<div id="create_product" class="margin15 btn">Adaugă</div>
 					</div>
 				</div>
 			</div>
