--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -30,6 +30,7 @@
 
 			<div id="fh5co-media-section">
 				<div class="container">
+					<!-- snip:checkProd -->
 					<div class="row animate-box">
 
 						<div class="item_pics">
@@ -55,11 +56,11 @@
 								<!-- end -->
 							</div>
 							<div>
-								<a id="add_to_cart_box" class="cartt" href="#"> <span class="icon-cart"></span>
-									Adaugă în coș
+								<a id="add_to_cart_box" class="cartt" href="#"> <span
+									class="icon-cart"></span> Adaugă în coș
 								</a>
 							</div>
-							<p/>
+							<p />
 						</div>
 						<div class="row">
 							<p>
@@ -83,16 +84,22 @@
 								</table>
 							</div>
 						</div>
+						<!-- snip:permissions(write) -->
+						<div class="row">
+							<div id="del_prod" class="btn del_prod">Șterge</div>
+						</div>
+						<!-- end -->
 					</div>
+					<!-- end -->
 
 				</div>
 			</div>
-
 			<!-- template:footermenu -->
 		</div>
 		<!-- template:footer -->
 	</div>
 	<!-- template:endscripts -->
+	<script src="/static/js/admin.js"></script>
 	<script src="/static/js/product.js"></script>
 	<script src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
 
