--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -87,6 +87,7 @@
 						<!-- snip:permissions(write) -->
 						<div class="row">
 							<div id="del_prod" class="btn del_prod">Șterge</div>
+							<a href="<!-- inline:saveurl -->"><div class="btn del_prod">Modifică</div></a>
 						</div>
 						<!-- end -->
 					</div>
