--- a/shopweb/web/saveproduct.html
+++ b/shopweb/web/saveproduct.html
@@ -21,7 +21,7 @@
 			<!-- template:menu -->
 
 			<div class="intro-cat" data-animate-effect="fadeIn">
-				<h2>Adaugă un produs nou</h2>
+				<h2>Salvează detalii produs</h2>
 			</div>
 
 			<div id="fh5co-media-section">
