--- a/shopweb/web/saveproduct.html
+++ b/shopweb/web/saveproduct.html
@@ -146,7 +146,7 @@
 	</div>
 	<!-- template:endscripts -->
 	<script src="/static/js/admin.js"></script>
-	<script src="/static/js/createproduct.js"></script>
+	<script src="/static/js/saveproduct.js"></script>
 </body>
 </html>
 
