--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -37,10 +37,12 @@
 							<span>Ordonează după</span> <select data-placeholder="..."
 								id="sortSelect">
 								<option value=""></option>
+								<!-- snip:sort -->
 								<option value="bynameasc">Nume › ascendent</option>
 								<option value="bynamedesc">Nume › descendent</option>
 								<option value="bypriceasc">Preț › ascendent</option>
 								<option value="bypricedesc">Preț › descendent</option>
+								<!-- end -->
 							</select>
 
 
