--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -57,8 +57,8 @@
 									<div class="desc">
 										<img alt="produs" />
 										<h3></h3>
-										<a href="#" class="cartt add_to_cart_box"><span class="icon-cart"></span>
-											Adaugă în coș</a>
+										<a href="#" class="cartt add_to_cart_box"><span
+											class="icon-cart"></span> Adaugă în coș</a>
 										<p></p>
 									</div>
 								</div>
@@ -74,7 +74,7 @@
 		<!-- template:footer -->
 	</div>
 	<!-- template:endscripts -->
-    <script src="/static/js/products.js"></script>
+	<script src="/static/js/products.js"></script>
 </body>
 </html>
 
