--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -53,6 +53,7 @@
 					<!-- end -->
 					<div class="row animate-box cart_item">
 						<form id="order_form">
+						   <!-- snip:userInfo -->
 							<div class="row">
 								<div class="col-md-2">
 									<label for="fname"> <!-- loc:first.name --></label>
@@ -130,6 +131,7 @@
 									<input id="zip" name="zip" type="text" />
 								</div>
 							</div>
+							<!-- end -->
 							<div class="row">
 								<select id="transport_pf" class="transport" name="transport">
 									<option value="19.99"><!-- loc:transport.1 --></option>
