--- a/shopweb/web/accountsettings.html
+++ b/shopweb/web/accountsettings.html
@@ -135,6 +135,7 @@
 					</div>
 					<div class="row animate-box">
 						<div id="save_user" class="margin15 btn">Salvează</div>
+						<div id="delete_user" class="margin15 btn">Șterge acest cont</div>
 					</div>
 				</div>
 
