--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -51,7 +51,7 @@
 						</div>
 					</div>
 					<!-- end -->
-					<div class="row animate-box cart_item">
+					<div class="row animate-box">
 						<form id="order_form">
 						   <!-- snip:userInfo -->
 							<div class="row">
