--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -37,7 +37,7 @@
 							<p>Dorim să promovăm aceste produse, pentru că sunt unice, nu
 								există nicăieri în lume altele. Mai mult, creatorii lor și-au
 								lăsat o parte din suflet în fiecare piesă, iar noi respectăm
-								asta. Te invităm și pe tine sâ o faci!</p>
+								asta. Te invităm și pe tine să o faci!</p>
 						</div>
 					</div>
 
