--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -10,11 +10,22 @@
 
 <!-- template:headers -->
 
-<title>idid.ro - Detalii despre produsul handmade selectat.</title>
+<title>idid.ro <!-- snip:title --> <!-- end --></title>
 </head>
 
 <body>
-
+	<div id="fb-root"></div>
+	<script>
+		(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id))
+				return;
+			js = d.createElement(s);
+			js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=915281988516999";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
 	<div class="box-wrap-all">
 		<div class="box-wrap">
 
@@ -59,6 +70,14 @@
 								<a id="add_to_cart_box" class="cartt" href="#"> <span
 									class="icon-cart"></span> Adaugă în coș
 								</a>
+							</div>
+							<div class="row top20">
+								<div class="fb-share-button"
+									data-href="<!-- inline: pageUrl -->" data-layout="button"
+									data-size="large" data-mobile-iframe="true">
+									<a class="fb-xfbml-parse-ignore" target="_blank"
+										href="<!-- inline: prodImageUrl -->">Share</a>
+								</div>
 							</div>
 							<p />
 						</div>
