--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -10,7 +10,13 @@
 
 <!-- template:headers -->
 
-<title>idid.ro <!-- snip:title --> <!-- end --></title>
+<title>idid.ro <!-- inline: title --></title>
+
+<meta name="fb:app_id" content="915281988516999" />
+<meta name="og:url" content="<!-- inline: pageUrl -->" />
+<meta name="og:image" content="<!-- inline: prodImageUrl -->" />
+<meta name="og:title" content="<!-- inline: title -->" />
+
 </head>
 
 <body>
@@ -33,9 +39,7 @@
 
 			<div class="intro-cat" data-animate-effect="fadeIn">
 				<h2>
-					<!-- snip:title -->
-					<span></span>
-					<!-- end -->
+					<!-- inline:title -->
 				</h2>
 			</div>
 
@@ -83,9 +87,7 @@
 						</div>
 						<div class="row">
 							<p>
-								<!-- snip:details -->
-							<div></div>
-							<!-- end -->
+								<!-- inline: desc -->
 							</p>
 						</div>
 						<div class="row">
