--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -16,6 +16,7 @@
 <meta name="og:url" content="<!-- inline: pageUrl -->" />
 <meta name="og:image" content="<!-- inline: prodImageUrl -->" />
 <meta name="og:title" content="<!-- inline: title -->" />
+<meta name="og:description" content="<!-- inline: desc -->" />
 
 </head>
 
