--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -45,7 +45,7 @@
 					<div class="col-md-4 animate-box bg-cat">
 						<a class="hover">
 							<div class="fh5co-cover">
-							    <img alt="produs" class="cat_img" />
+								<img class="cat_img"/>
 								<div class="desc">
 									<h3></h3>
 									<span>Vezi produse</span>
