--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -72,7 +72,7 @@
 								<!-- end -->
 							</div>
 							<div>
-								<a id="add_to_cart_box" class="cartt" href="#"> <span
+								<a id="add_to_cart_box" class="cartt" href="#" data-id="<!--inline:prodId-->"> <span
 									class="icon-cart"></span> Adaugă în coș
 								</a>
 							</div>
