--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -55,7 +55,7 @@
 							<a class="hover">
 								<div class="fh5co-cover-produs">
 									<div class="desc">
-										<img alt="produs" />
+										<img/>
 										<h3></h3>
 										<a href="#" class="cartt add_to_cart_box"><span
 											class="icon-cart"></span> Adaugă în coș</a>
