--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -1,173 +1,178 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
 
 <head>
 
-<!-- template:headers -->
+    <!-- template:headers -->
 
-<title>idid.ro - Cosul cu produsele selectate..</title>
+    <title>idid.ro - Cosul cu produsele selectate..</title>
 </head>
 
 <body>
 
-	<div class="box-wrap-all">
-		<div class="box-wrap">
+<div class="box-wrap-all">
+    <div class="box-wrap">
 
-			<!-- template:menu -->
+        <!-- template:menu -->
 
-			<div class="intro-cat" data-animate-effect="fadeIn">
-				<h2>Coșul de cumpărături</h2>
-			</div>
+        <div class="intro-cat" data-animate-effect="fadeIn">
+            <h2>Coșul de cumpărături</h2>
+        </div>
 
-			<div id="fh5co-media-section">
-				<div class="container">
-					<div class="empty-cart">
-						<!-- inline:emptyMsg -->
-					</div>
-					<!-- snip:empty -->
-					<!-- snip:cart_prods -->
-					<div class="row animate-box cart_item">
-						<div class="img_cont">
-							<img />
-						</div>
-						<div class="details">
-							<div class="row">
-								<span class="prod_desc"></span>
-								<div class="row top20">
-									Preț unitar: <span class="prod_price"></span> <span> <select>
+        <div id="fh5co-media-section">
+            <div class="container">
+                <div class="empty-cart">
+                    <!-- inline:emptyMsg -->
+                </div>
+                <!-- snip:empty -->
+                <!-- snip:cart_prods -->
+                <div class="row animate-box cart_item">
+                    <a class="hover">
+                        <div class="img_cont">
+                            <img/>
+                        </div>
+                        <div class="details">
+                            <div class="row">
+                                <span class="prod_desc"></span>
+                                <div class="row top20">
+                                    Preț unitar: <span class="prod_price"></span> <span> <select>
 											<!-- snip:quantities -->
 											<option></option>
-											<!-- end -->
+                                    <!-- end -->
 									</select> buc
 									</span><span> <a class="cartt_small cart_delete" href="#">Șterge</a>
 									</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- end -->
-					<div class="row animate-box">
-						<form id="order_form">
-						   <!-- snip:userInfo -->
-							<div class="row">
-								<div class="col-md-2">
-									<label for="fname"> <!-- loc:first.name --></label>
-								</div>
-								<div class="col-md-2">
-									<input id="fname" name="fname" type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<label for="lname"> <!-- loc:last.name --></label>
-								</div>
-								<div class="col-md-2">
-									<input id="lname" name="lname" type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<label for="email"> <!-- loc:email --></label>
-								</div>
-								<div class="col-md-2">
-									<input id="email" name="email" type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<label for="phone"> <!-- loc:phone --></label>
-								</div>
-								<div class="col-md-2">
-									<input id="phone" name="phone" type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<label for="cnp"> <!-- loc:cnp -->
-									</label>
-								</div>
-								<div class="col-md-2">
-									<input id="cnp" name="cnp" type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<label for="region"> <!-- loc:region -->
-									</label>
-								</div>
-								<div class="col-md-2">
-									<input id="region" name="region" type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<label for="city"> <!-- loc:city -->
-									</label>
-								</div>
-								<div class="col-md-2">
-									<input id="city" name="city" type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<label for="address"> <!-- loc:address -->
-									</label>
-								</div>
-								<div class="col-md-2">
-									<input id="address" name="address" type="text" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<label for="zip"> <!-- loc:zip -->
-									</label>
-								</div>
-								<div class="col-md-2">
-									<input id="zip" name="zip" type="text" />
-								</div>
-							</div>
-							<!-- end -->
-							<div class="row">
-								<select id="transport_pf" class="transport" name="transport">
-									<option value="19.99"><!-- loc:transport.1 --></option>
-									<option value="9.99"><!-- loc:transport.2 --></option>
-								</select>
-							</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end -->
+                <div class="row animate-box">
+                    <form id="order_form">
+                        <!-- snip:userInfo -->
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="fname"> <!-- loc:first.name --></label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="fname" name="fname" type="text"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="lname"> <!-- loc:last.name --></label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="lname" name="lname" type="text"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="email"> <!-- loc:email --></label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="email" name="email" type="text"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="phone"> <!-- loc:phone --></label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="phone" name="phone" type="text"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="cnp"> <!-- loc:cnp -->
+                                </label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="cnp" name="cnp" type="text"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="region"> <!-- loc:region -->
+                                </label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="region" name="region" type="text"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="city"> <!-- loc:city -->
+                                </label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="city" name="city" type="text"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="address"> <!-- loc:address -->
+                                </label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="address" name="address" type="text"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label for="zip"> <!-- loc:zip -->
+                                </label>
+                            </div>
+                            <div class="col-md-2">
+                                <input id="zip" name="zip" type="text"/>
+                            </div>
+                        </div>
+                        <!-- end -->
+                        <div class="row">
+                            <select id="transport_pf" class="transport" name="transport">
+                                <option value="19.99"><!-- loc:transport.1 --></option>
+                                <option value="9.99"><!-- loc:transport.2 --></option>
+                            </select>
+                        </div>
 
 
-							<div class="row">
-								<div id="terms_wrapper" class="col-md-12">
-									<input id="terms" name="terms" type="checkbox" /> <label
-										for="terms"> <!-- loc:terms.and.conds -->
-									</label>
-								</div>
-							</div>
-							<div class="row plata">
+                        <div class="row">
+                            <div id="terms_wrapper" class="col-md-12">
+                                <input id="terms" name="terms" type="checkbox"/> <label
+                                    for="terms"> <!-- loc:terms.and.conds -->
+                            </label>
+                            </div>
+                        </div>
+                        <div class="row plata">
 								<span>Total <span id="total">
 										<!-- inline:total -->
 								</span> lei
 								</span> <span><a id="buy" class="cartt_small" href="#">Cumpăr</a></span>
-							</div>
-							<div class="row plata">
-								<span>Plata se va face ramburs.</span>
-							</div>
-						</form>
-					</div>
-					<!-- end -->
-					<div class="row animate-box"></div>
-				</div>
-			</div>
+                        </div>
+                        <div class="row plata">
+                            <span>Plata se va face ramburs.</span>
+                        </div>
+                    </form>
+                </div>
+                <!-- end -->
+                <div class="row animate-box"></div>
+            </div>
+        </div>
 
-			<!-- template:footermenu -->
-		</div>
-		<!-- template:footer -->
-	</div>
-	<!-- template:endscripts -->
+        <!-- template:footermenu -->
+    </div>
+    <!-- template:footer -->
+</div>
+<!-- template:endscripts -->
 </body>
 </html>
 
