--- a/shopweb/web/terms.html
+++ b/shopweb/web/terms.html
@@ -84,8 +84,7 @@
 							<strong><span style="text-decoration: underline;">Informatii
 									privitoare la livrare:</span></strong>
 						</p>
-						<p>Termenul de livrare este mentionat in dreptul fiecarui
-							produs, si se socoteste de la data preluarii comenzii
+                        <p>Termenul se socoteste de la data preluarii comenzii
 							dumneavoastra. Acest termen poate fi modificat din motive
 							independente de vointa noastra.</p>
 						<p></p>
