--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -10,8 +10,18 @@
 
 <!-- template:headers -->
 
-<title>idid.ro - Categorii de produse lucrate manual</title>
-<meta name="description" content="Categorii produse" />
+
+    <title>Produse Handmade, Lucrate Manual, Magazin Online - iDid</title>
+    <meta name="description"
+          content="Cauti Produse Handmade, Lucrate Manual, iDid este un magazin online cu produse handmade bijuterii, genti, textile, ceasuri, vase, tablouri si multe altele."/>
+
+
+    <meta name="fb:app_id" content="915281988516999"/>
+    <meta name="og:url" content="http://idid.ro/"/>
+    <meta name="og:image" content="http://idid.ro/static/images/slide.jpg"/>
+    <meta name="og:title" content="Produse Handmade, Lucrate Manual, Magazin Online - iDid"/>
+    <meta name="og:description"
+          content="Cauti Produse Handmade, Lucrate Manual, iDid este un magazin online cu produse handmade bijuterii, genti, textile, ceasuri, vase, tablouri si multe altele."/>
 </head>
 
 <body>
@@ -22,10 +32,12 @@
 			<!-- template:menu -->
 
 			<div class="intro" data-animate-effect="fadeIn">
-				<h2>Exclusiv produse create manual</h2>
+                <h1>Produse Handmade, Lucrate Manual</h1>
 				<p>
-					Vei gasi aici bucăți de natură, multă culoare,<br />artă și
-					talent, detalii atent conturate.
+                    Vei gasi aici bucăți de natură, multă culoare, artă și talent,<br/>
+                    detalii atent conturate. Cauti Produse Handmade, Lucrate Manual,<br/>
+                    iDid este un magazin online cu produse handmade<br/>
+                    bijuterii, genti, textile, ceasuri, vase, tablouri si multe altele.
 				</p>
 			</div>
 
@@ -54,17 +66,42 @@
 						</a>
 					</div>
 					<!-- end -->
-				</div>
-			</div>
 
 
-			<!-- template:footermenu -->
+                    <div class="row animate-box">
+                        <div class="col-md-12">
+                            <p><img src="http://idid.ro/static/images/logo.svg" alt="Produse Handmade, Lucrate Manual"
+                                    style="float:right" width="450px"/>Produse handmade sau manuale, cunosc in prezent o
+                                reapreciere la nivel global, fiind definite la un nivel general ca HANDMADE, nume
+                                provenit din limba engleza, in traducere reprezentand facut de mana.
+                            </p>
+                            <p>
+                                Idid nu vinde doar simple produse handmade, ci un produs rezultat dintr-un mestesug
+                                imbinat cu arta artizanatului. Mestesugul reprezinta deopotriva meserie, profesiune, dar
+                                si pricepere, indemanare, abilitate, talent iar Artizanatul este un mestesug practicat
+                                cu arta.
+                            </p>
+                            <p>
+                                Produsele lucrate manual, handmade, sunt produsele si serviciile executate de
+                                mestesugari, mici meseriasi si artizani, fie complet manual, fie cu ajutorul uneltelor
+                                manuale sau chiar mecanice, atat timp cat contributia manuala a mestesugarului sau
+                                artizanului ramane cea mai substantiala componenta a produsului finit.
+                            </p>
+
+                        </div>
+                    </div>
+
+
+                </div>
+
+
+                <!-- template:footermenu -->
 
 		</div>
+        </div>
 
-		<!-- template:footer -->
-	</div>
-	
+        <!-- template:footer -->
+
 	<!-- template:endscripts -->
 </body>
 </html>
