--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -10,8 +10,11 @@
 
 <!-- template:headers -->
 
-<title>idid.ro - Lista de produse handmade din categoria
-	selectata</title>
+    <title>Produse Handmade, Lucrate Manual, magazin Online - iDid</title>
+    <meta name="description"
+          content="Cauti Produse Handmade, Lucrate Manual? iDid a pregatit o serie de produse lucrat manual, bijuterii, genti, textile, ceasuri, tablouri, vase si multe altele."/>
+
+
 </head>
 
 <body>
@@ -22,17 +25,32 @@
 			<!-- template:menu -->
 
 			<div class="intro-cat" data-animate-effect="fadeIn">
-				<h2>
-					<!-- snip:cat_name -->
-					<span></span>
-					<!-- end -->
-				</h2>
+                <h1>
+                    <span class="numeprodus"><!-- snip:cat_name --><span></span><!-- end --></span> Handmade, Lucrate
+                    Manual
+                </h1>
 			</div>
 
 			<div id="fh5co-media-section">
 				<div class="container">
 					<div class="row animate-box">
-						<div class="col-md-8 col-md-offset-2 text-center heading-section">
+
+
+                        <div class="col-md-12">
+                            <p class="mic">Cauti produse din categoria: <span
+                                    class="numeprodus"><!-- snip:cat_name --><span></span><!-- end --></span> handmade?
+                                iDid a pregatit o serie de produse din categoria <span class="numeprodus"><!-- snip:cat_name --><span></span>
+                                    <!-- end --></span> lucrate manual. Comanda online produse handmade atent
+                                selectionate, in asa fel incat calitatea materialelor, atentia la detalii in prelucrare
+                                si talentul, sa fie cele care creeaza diferenta.</p>
+                            <p class="mic">Livrarea produselor din categoria: <span class="numeprodus"><!-- snip:cat_name --><span></span>
+                                <!-- end --></span> - lucrate manual se face de catre o societate de curierat, la
+                                domiciliul clientului, in termen de 2 zile de la expedierea comenzii, si poate ajunge la
+                                destinatie dupa maxim 48 ore.</p>
+                        </div>
+
+
+                        <div class="col-md-8 col-md-offset-2 text-center heading-section">
 
 							<span>Ordonează după</span> <select data-placeholder="..."
 								id="sortSelect">
