--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -10,7 +10,9 @@
 
 <!-- template:headers -->
 
-<title>idid.ro <!-- inline: title --></title>
+    <title><!-- inline:title --> - Handmade - Lucrat Manual</title>
+    <meta name="description"
+          content="Cauti <!-- inline:title --> - handmade? Iata cateva din motivele pentru care ar trebui sa comanzi produsul <!-- inline:title --> - lucrat manual:"/>
 
 <meta name="fb:app_id" content="915281988516999" />
 <meta name="og:url" content="<!-- inline: pageUrl -->" />
@@ -39,9 +41,9 @@
 			<!-- template:menu -->
 
 			<div class="intro-cat" data-animate-effect="fadeIn">
-				<h2>
-					<!-- inline:title -->
-				</h2>
+                <h1>
+                    <span class="numeprodus"><!-- inline:title --></span> Handmade - Lucrat Manual
+                </h1>
 			</div>
 
 			<div id="fh5co-media-section">
@@ -92,10 +94,14 @@
 							</p>
 						</div>
 						<div class="row">
-							<h2 class="purple">Specificații</h2>
+                            <h2 class="purple">Specificații produs <span class="numeprodus"><!-- inline:title --></span>
+                                handmade</h2>
 						</div>
 						<div class="row">
 							<div class="prod_specs">
+                                <p>Mai jos puteti vedea specificatiile pentru produsul <span class="numeprodus"><!-- inline:title --></span>
+                                    lucrat manual, handmade. La unele produse nu avem specificatii suplimentare, doar
+                                    descrierea generala.</p>
 								<table cellspacing="0">
 									<!-- snip:specs -->
 									<tr>
@@ -106,7 +112,74 @@
 								</table>
 							</div>
 						</div>
-						<!-- snip:permissions(write) -->
+
+
+                        <div class="row">
+                            <h2 class="purple margine"><span class="numeprodus"><!-- inline:title --></span> Handmade -
+                                Lucrat Manual</h2>
+                        </div>
+                        <div class="row">
+                            <p>
+                                Iti place produsul <span class="numeprodus"><!-- inline:title --></span> handmade? Iata
+                                cateva din motivele pentru care ar trebui sa comanzi produsul <span class="numeprodus"><!-- inline:title --></span>
+                                lucrat manual:
+                            <ul>
+                                <li>calitatea materialelor, atentia la detalii in prelucrare</li>
+                                <li>este lucrat cu suflet, nu de o masina automata</li>
+                                <li>il putem expedia in cel mai scurt timp</li>
+                            </ul>
+                            </p>
+                            <p>
+                                Produsele manuale cunosc in prezent o reapreciere la nivel global, fiind definite la un
+                                nivel general ca HANDMADE, nume provenit din limba engleza, in traducere reprezentand
+                                facut de mana.
+                            </p>
+                            <p>
+                                Idid nu vinde doar un simplu produs <span
+                                    class="numeprodus"><!-- inline:title --></span> handmade, ci un produs rezultat
+                                dintr-un mestesug imbinat cu arta artizanatului. Mestesugul reprezinta deopotriva
+                                meserie, profesiune, dar si pricepere, indemanare, abilitate, talent iar Artizanatul
+                                este un mestesug practicat cu arta.
+                            </p>
+                            <p>
+                                Produsele <span class="numeprodus"><!-- inline:title --></span> lucrate manual,
+                                handmade, sunt produsele si serviciile executate de mestesugari, mici meseriasi si
+                                artizani, fie complet manual, fie cu ajutorul uneltelor manuale sau chiar mecanice, atat
+                                timp cat contributia manuala a mestesugarului sau artizanului ramane cea mai
+                                substantiala componenta a produsului finit.
+                            </p>
+                            <p>
+                                <i>In functie de setarile monitorului (luminozitate/coloristica), nuantele pot fi usor
+                                    diferite.</i>
+                            </p>
+                        </div>
+
+
+                        <div class="row">
+                            <h2 class="purple margine">Livrare si Plata <span
+                                    class="numeprodus"><!-- inline:title --></span> Lucrat Manual</h2>
+                        </div>
+                        <div class="row">
+                            <p>
+                                Plata produselor -<span class="numeprodus"><!-- inline:title --></span>- se efectueaza
+                                in numerar/cash, la livrarea produsului.
+                            </p>
+                            <p>
+                                Livrarea se face de catre o societate de curierat, la domiciliul clientului, in termen
+                                de 2 zile de la expedierea comenzii, si poate ajunge la destinatie dupa maxim 48 ore.
+                            </p>
+                            <p>
+                                In ziua in care coletul cu comanda dumneavoastra va fi expediat, veti fi instiintat prin
+                                e-mail sau telefonic de catre noi.
+                            </p>
+                            <p>
+                                <a href="http://idid.ro/terms" class="cartt" target="_blank">Afla mai multe despre
+                                    termenii de livrare si plata</a>
+                            </p>
+                        </div>
+
+
+                        <!-- snip:permissions(write) -->
 						<div class="row">
 							<div id="del_prod" class="btn del_prod">Șterge</div>
 							<a href="<!-- inline:saveurl -->"><div class="btn del_prod">Modifică</div></a>
