--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -181,7 +181,7 @@
 
                         <!-- snip:permissions(write) -->
 						<div class="row">
-							<div id="del_prod" class="btn del_prod">Șterge</div>
+							<div id="del_prod" data-prod="<!--inline:prodId-->" class="btn del_prod">Șterge</div>
 							<a href="<!-- inline:saveurl -->"><div class="btn del_prod">Modifică</div></a>
 						</div>
 						<!-- end -->
