--- a/shopweb/web/saveproduct.html
+++ b/shopweb/web/saveproduct.html
@@ -153,7 +153,7 @@
                                     <!--snip:delimglist-->
                                     <li>
                                         <input type="checkbox" name="delimg"/>
-                                        <img/>
+                                        <label><img/></label>
                                     </li>
                                     <!--end-->
                                 </ul>
