--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -10,7 +10,11 @@
 
 <!-- template:headers -->
 
-    <title>Produse Handmade, Lucrate Manual, magazin Online - iDid</title>
+    <title>
+		<!--snip:cat_name-->
+		<!--end-->
+		handmade, lucrate manual
+	</title>
     <meta name="description"
           content="Cauti Produse Handmade, Lucrate Manual? iDid a pregatit o serie de produse lucrat manual, bijuterii, genti, textile, ceasuri, tablouri, vase si multe altele."/>
 
