--- a/shopweb/web/saveproduct.html
+++ b/shopweb/web/saveproduct.html
@@ -24,7 +24,7 @@
         <!-- template:menu -->
 
         <div class="intro-cat" data-animate-effect="fadeIn">
-            <h2>Salvează detalii produs</h2>
+            <h2>Editează detaliile produsului</h2>
         </div>
 
         <div id="fh5co-media-section">
