--- a/shopweb/web/index.html
+++ b/shopweb/web/index.html
@@ -45,7 +45,7 @@
 				<div class="container">
 					<div class="row animate-box">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section">
-							<h3>Selecție atentă de produse</h3>
+                            <h2>Selecție atentă de produse handmade</h2>
 							<p>Dorim să promovăm aceste produse, pentru că sunt unice, nu
 								există nicăieri în lume altele. Mai mult, creatorii lor și-au
 								lăsat o parte din suflet în fiecare piesă, iar noi respectăm
