--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -28,7 +28,7 @@
         </div>
 
         <div id="fh5co-media-section">
-            <div class="container">
+            <div class="container content">
                 <div class="empty-cart">
                     <!-- inline:emptyMsg -->
                 </div>
@@ -57,6 +57,9 @@
                 </div>
                 <!-- end -->
                 <div class="row animate-box">
+                    <div class="cart_errors">
+                        <ul></ul>
+                    </div>
                     <form id="order_form">
                         <!-- snip:userInfo -->
                         <div class="row">
