--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -48,7 +48,7 @@
 											<option></option>
                                     <!-- end -->
 									</select> buc
-									</span><span> <a class="cartt_small cart_delete" href="#">Șterge</a>
+									</span><span> <div class="cartt_small cart_delete btn">Șterge</div>
 									</span>
                                 </div>
                             </div>
